--- a/K8S/commands-depl.yaml
+++ b/K8S/commands-depl.yaml
@@ -1,32 +1,31 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: platforms-depl
+  name: commands-depl
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: platformservice
+      app: commandsservice
   template:
     metadata:
       labels:
-        app: platformservice
+        app: commandsservice
     spec:
       containers:
-        - name: platformservice
-          image: sanmanchavan1991work/platformservice:latest
+        - name: commandsservice
+          image: sanmanchavan1991work/commandsservice:latest
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: platforms-clusterip-srv
+  name: commands-clusterip-srv
 spec:
   type: ClusterIP
   selector:
-    app: platformservice
+    app: commandsservice
   ports:
-  - name: platformservice
+  - name: commandsservice
     protocol: TCP
     port: 80
-    targetPort: 80
-
+    targetPort: 80 
